--- a/index.html
+++ b/index.html
@@ -2,520 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GOV COLLAB PORTAL – Draft</title>
+  <title>GOV COLLAB PORTAL – Chairman Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Inter font (clean, neutral, similar vibe) -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    :root {
-      --color-bg: #f5f6f8;
-      --color-primary: #333F4F;
-      --color-accent-positive: #50B589;
-      --color-accent-negative: #E27F88;
-      --color-surface: #ffffff;
-      --color-border-subtle: rgba(51, 63, 79, 0.12);
-      --radius-card: 6px;
-      --shadow-card: 0 1px 3px rgba(0,0,0,0.04);
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--color-bg);
-      color: var(--color-primary);
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    .app {
-      display: flex;
-      min-height: 100vh;
-    }
-
-    /* Sidebar */
-
-    .sidebar {
-      width: 240px;
-      background: var(--color-primary);
-      color: #ffffff;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .sidebar-header {
-      padding: 20px 20px 16px;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.12);
-    }
-
-    .sidebar-logo {
-      font-weight: 600;
-      font-size: 18px;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      line-height: 1.3;
-    }
-
-    .sidebar-logo span {
-      display: block;
-      font-size: 11px;
-      font-weight: 400;
-      opacity: 0.85;
-      margin-top: 4px;
-    }
-
-    .sidebar-nav {
-      padding: 12px 0;
-      flex: 1;
-    }
-
-    .sidebar-nav-item {
-      padding: 10px 20px;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      cursor: pointer;
-      opacity: 0.9;
-    }
-
-    .sidebar-nav-item:hover {
-      background: rgba(255, 255, 255, 0.06);
-    }
-
-    .sidebar-nav-item--active {
-      background: rgba(255, 255, 255, 0.12);
-      font-weight: 500;
-    }
-
-    .sidebar-nav-indicator {
-      width: 4px;
-      height: 18px;
-      border-radius: 999px;
-      background: #ffffff;
-    }
-
-    .sidebar-nav-label {
-      flex: 1;
-    }
-
-    .sidebar-footer {
-      padding: 16px 20px;
-      font-size: 12px;
-      opacity: 0.8;
-      border-top: 1px solid rgba(255, 255, 255, 0.12);
-    }
-
-    /* Main area */
-
-    .main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      min-width: 0;
-    }
-
-    .topbar {
-      background: #ffffff;
-      border-bottom: 1px solid var(--color-border-subtle);
-      padding: 12px 24px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .topbar-title {
-      font-size: 16px;
-      font-weight: 500;
-    }
-
-    .topbar-user {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-size: 13px;
-    }
-
-    .topbar-role-pill {
-      padding: 4px 10px;
-      border-radius: 999px;
-      background: rgba(80, 181, 137, 0.12);
-      color: var(--color-accent-positive);
-      font-size: 11px;
-      font-weight: 500;
-    }
-
-    .topbar-avatar {
-      width: 28px;
-      height: 28px;
-      border-radius: 50%;
-      background: var(--color-primary);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #ffffff;
-      font-size: 12px;
-      font-weight: 600;
-    }
-
-    .content {
-      padding: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .page-heading {
-      display: flex;
-      align-items: baseline;
-      justify-content: space-between;
-      gap: 12px;
-    }
-
-    .page-heading-title {
-      font-size: 22px;
-      font-weight: 600;
-    }
-
-    .page-heading-subtitle {
-      font-size: 13px;
-      opacity: 0.8;
-    }
-
-    /* Layout grid */
-
-    .grid {
-      display: grid;
-      gap: 20px;
-    }
-
-    .grid--two {
-      grid-template-columns: 2fr 3fr;
-    }
-
-    .grid--three {
-      grid-template-columns: 2fr 2fr 2fr;
-    }
-
-    @media (max-width: 960px) {
-      .sidebar {
-        display: none;
-      }
-      .content {
-        padding: 16px;
-      }
-      .grid--two,
-      .grid--three {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    /* Cards */
-
-    .card {
-      background: var(--color-surface);
-      border-radius: var(--radius-card);
-      border: 1px solid var(--color-border-subtle);
-      box-shadow: var(--shadow-card);
-      padding: 16px 18px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .card-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 4px;
-    }
-
-    .card-title {
-      font-size: 15px;
-      font-weight: 500;
-    }
-
-    .card-subtitle {
-      font-size: 12px;
-      opacity: 0.7;
-    }
-
-    .card-actions {
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-
-    /* Buttons */
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      padding: 7px 14px;
-      font-size: 13px;
-      border-radius: 4px;
-      border: 1px solid transparent;
-      background: transparent;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background 0.12s ease, border-color 0.12s ease;
-    }
-
-    .btn-primary {
-      background: var(--color-primary);
-      color: #ffffff;
-    }
-
-    .btn-primary:hover {
-      background: #3c495c;
-    }
-
-    .btn-outline {
-      border-color: var(--color-border-subtle);
-      background: #ffffff;
-      color: var(--color-primary);
-    }
-
-    .btn-outline:hover {
-      border-color: rgba(51, 63, 79, 0.3);
-      background: #f7f8fa;
-    }
-
-    .btn-success {
-      border-color: rgba(80, 181, 137, 0.3);
-      color: var(--color-accent-positive);
-    }
-
-    .btn-danger {
-      border-color: rgba(226, 127, 136, 0.3);
-      color: var(--color-accent-negative);
-    }
-
-    /* Form elements */
-
-    .field {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      margin-bottom: 8px;
-    }
-
-    .field-label {
-      font-size: 12px;
-      opacity: 0.8;
-    }
-
-    .field-input,
-    .field-select,
-    .field-textarea {
-      font-size: 13px;
-      padding: 7px 10px;
-      border-radius: 4px;
-      border: 1px solid rgba(51, 63, 79, 0.16);
-      background: #ffffff;
-      outline: none;
-    }
-
-    .field-input:focus,
-    .field-select:focus,
-    .field-textarea:focus {
-      border-color: var(--color-primary);
-    }
-
-    .field-textarea {
-      min-height: 70px;
-      resize: vertical;
-    }
-
-    .field-hint {
-      font-size: 11px;
-      opacity: 0.7;
-    }
-
-    /* Status chips */
-
-    .status-pill {
-      display: inline-flex;
-      align-items: center;
-      padding: 3px 8px;
-      border-radius: 999px;
-      font-size: 11px;
-      font-weight: 500;
-    }
-
-    .status-pill--approved {
-      background: rgba(80, 181, 137, 0.12);
-      color: var(--color-accent-positive);
-    }
-
-    .status-pill--returned {
-      background: rgba(226, 127, 136, 0.12);
-      color: var(--color-accent-negative);
-    }
-
-    .status-pill--pending {
-      background: rgba(51, 63, 79, 0.06);
-      color: var(--color-primary);
-    }
-
-    /* Table */
-
-    .table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 13px;
-    }
-
-    .table thead {
-      background: #fafbfc;
-    }
-
-    .table th,
-    .table td {
-      padding: 8px 10px;
-      text-align: left;
-      border-bottom: 1px solid rgba(51, 63, 79, 0.08);
-    }
-
-    .table th {
-      font-weight: 500;
-      font-size: 12px;
-      opacity: 0.8;
-    }
-
-    .table tr:last-child td {
-      border-bottom: none;
-    }
-
-    /* Fake mini calendar */
-
-    .mini-calendar {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 4px;
-      margin-top: 8px;
-      font-size: 11px;
-    }
-
-    .mini-calendar-header {
-      font-size: 10px;
-      opacity: 0.7;
-      text-align: center;
-    }
-
-    .mini-calendar-day {
-      height: 24px;
-      border-radius: 4px;
-      border: 1px solid rgba(51, 63, 79, 0.08);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #ffffff;
-    }
-
-    .mini-calendar-day--has-event {
-      border-color: rgba(80, 181, 137, 0.6);
-      background: rgba(80, 181, 137, 0.05);
-    }
-
-    .mini-calendar-day--deadline-soon {
-      border-color: rgba(226, 127, 136, 0.7);
-      background: rgba(226, 127, 136, 0.06);
-      font-weight: 600;
-    }
-
-    /* Fake CKEditor block */
-
-    .editor-placeholder {
-      margin-top: 8px;
-      border-radius: 4px;
-      border: 1px solid rgba(51, 63, 79, 0.16);
-      background: #ffffff;
-      padding: 10px;
-      min-height: 180px;
-      font-size: 13px;
-      color: rgba(51, 63, 79, 0.7);
-    }
-
-    .editor-toolbar-placeholder {
-      border-bottom: 1px solid rgba(51, 63, 79, 0.08);
-      padding-bottom: 6px;
-      margin-bottom: 8px;
-      font-size: 11px;
-      opacity: 0.7;
-    }
-
-    .editor-body-placeholder p {
-      margin-bottom: 6px;
-    }
-
-    .editor-body-placeholder p:last-child {
-      margin-bottom: 0;
-    }
-
-    /* Badge bar for status at top of editor */
-
-    .status-bar {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 12px;
-      margin-bottom: 6px;
-    }
-
-    .status-bar-steps {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      font-size: 11px;
-      opacity: 0.8;
-    }
-
-    .status-step {
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    .status-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: rgba(51, 63, 79, 0.2);
-    }
-
-    .status-step--active .status-dot {
-      background: var(--color-accent-positive);
-    }
-
-    .status-step--attention .status-dot {
-      background: var(--color-accent-negative);
-    }
-
-    /* Tagline for deadline */
-
-    .deadline-pill {
-      font-size: 11px;
-      padding: 3px 8px;
-      border-radius: 999px;
-      background: rgba(51, 63, 79, 0.04);
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="app">
-    <!-- SIDEBAR -->
     <aside class="sidebar">
       <div class="sidebar-header">
         <div class="sidebar-logo">
@@ -525,34 +19,40 @@
       </div>
       <nav class="sidebar-nav">
         <div class="sidebar-nav-item sidebar-nav-item--active">
-          <div class="sidebar-nav-indicator"></div>
-          <div class="sidebar-nav-label">Dashboard</div>
+          <a href="index.html">
+            <div class="sidebar-nav-indicator"></div>
+            <div class="sidebar-nav-label">Dashboard</div>
+          </a>
         </div>
         <div class="sidebar-nav-item">
-          <div class="sidebar-nav-label">Calendar</div>
+          <a href="calendar.html">
+            <div class="sidebar-nav-label">Calendar</div>
+          </a>
         </div>
         <div class="sidebar-nav-item">
-          <div class="sidebar-nav-label">Library</div>
+          <a href="library.html">
+            <div class="sidebar-nav-label">Library</div>
+          </a>
         </div>
         <div class="sidebar-nav-item">
-          <div class="sidebar-nav-label">Statistics</div>
+          <a href="statistics.html">
+            <div class="sidebar-nav-label">Statistics</div>
+          </a>
         </div>
         <div class="sidebar-nav-item">
-          <div class="sidebar-nav-label">Admin</div>
+          <a href="admin-users.html">
+            <div class="sidebar-nav-label">Admin</div>
+          </a>
         </div>
       </nav>
       <div class="sidebar-footer">
-        Draft UI · v0.1  
-        <br />Non-functional layout only
+        Draft UI · v0.1<br />Non-functional layout only
       </div>
     </aside>
 
-    <!-- MAIN AREA -->
     <div class="main">
       <header class="topbar">
-        <div class="topbar-title">
-          Chairman Dashboard
-        </div>
+        <div class="topbar-title">Chairman Dashboard</div>
         <div class="topbar-user">
           <div class="topbar-role-pill">Chairman</div>
           <span>L. Tortladze</span>
@@ -570,9 +70,7 @@
           </div>
         </section>
 
-        <!-- FIRST ROW: CALENDAR + COUNTRY SELECTION -->
         <section class="grid grid--two">
-          <!-- Calendar card -->
           <div class="card">
             <div class="card-header">
               <div>
@@ -604,7 +102,6 @@
               <div class="mini-calendar-day mini-calendar-day--has-event">11</div>
               <div class="mini-calendar-day">12</div>
               <div class="mini-calendar-day">13</div>
-              <!-- (rest is just illustrative, not a full month) -->
             </div>
 
             <div style="margin-top: 10px; font-size: 12px;">
@@ -626,7 +123,6 @@
             </ul>
           </div>
 
-          <!-- Country choice + actions -->
           <div class="card">
             <div class="card-header">
               <div>
@@ -643,7 +139,7 @@
                 <option>Germany</option>
                 <option>France</option>
               </select>
-              <div class="field-hint">In real version this will be populated from the database.</div>
+              <div class="field-hint">Static placeholder for now.</div>
             </div>
 
             <div class="field" style="margin-top: 4px;">
@@ -669,12 +165,11 @@
           </div>
         </section>
 
-        <!-- SECOND ROW: SAMPLE SECTION TABLE -->
         <section class="card">
           <div class="card-header">
             <div>
               <div class="card-title">Sections for Serbia</div>
-              <div class="card-subtitle">Chairman can open each section and edit in CKEditor if needed.</div>
+              <div class="card-subtitle">Chairman can open each section and edit if needed.</div>
             </div>
             <div>
               <span class="status-pill status-pill--approved">6 / 9 sections approved</span>
@@ -697,7 +192,7 @@
                 <td>04 Dec 2025 · 11:10</td>
                 <td>Nino</td>
                 <td style="text-align:right;">
-                  <button class="btn btn-outline" style="font-size:12px; padding:4px 10px;">Open section</button>
+                  <a href="tp-editor.html" class="btn btn-outline btn-sm">Open section</a>
                 </td>
               </tr>
               <tr>
@@ -706,7 +201,7 @@
                 <td>05 Dec 2025 · 15:05</td>
                 <td>Giorgi</td>
                 <td style="text-align:right;">
-                  <button class="btn btn-outline" style="font-size:12px; padding:4px 10px;">Open section</button>
+                  <a href="tp-editor.html" class="btn btn-outline btn-sm">Open section</a>
                 </td>
               </tr>
               <tr>
@@ -715,62 +210,11 @@
                 <td>05 Dec 2025 · 13:42</td>
                 <td>Nino</td>
                 <td style="text-align:right;">
-                  <button class="btn btn-outline" style="font-size:12px; padding:4px 10px;">Open section</button>
+                  <a href="tp-editor.html" class="btn btn-outline btn-sm">Open section</a>
                 </td>
               </tr>
             </tbody>
           </table>
-        </section>
-
-        <!-- THIRD ROW: SAMPLE SECTION EDITOR VIEW (shared CKEditor layout) -->
-        <section class="card">
-          <div class="card-header">
-            <div>
-              <div class="card-title">Edit section – Tourism · Serbia</div>
-              <div class="card-subtitle">Shared editor layout for Collaborator / Supervisor / Chairman.</div>
-            </div>
-            <div class="deadline-pill">
-              Deadline: 20 Dec 2025
-            </div>
-          </div>
-
-          <div class="status-bar">
-            <div class="status-bar-steps">
-              <div class="status-step">
-                <div class="status-dot"></div><span>Draft</span>
-              </div>
-              <div class="status-step status-step--attention">
-                <div class="status-dot"></div><span>Returned</span>
-              </div>
-              <div class="status-step">
-                <div class="status-dot"></div><span>Approved</span>
-              </div>
-            </div>
-            <div>
-              <span class="status-pill status-pill--returned">Returned with comments</span>
-            </div>
-          </div>
-
-          <div style="font-size: 12px; padding: 6px 8px; border-radius: 4px; background: rgba(226, 127, 136, 0.06); border: 1px solid rgba(226, 127, 136, 0.3); margin-bottom: 8px;">
-            Chairman comment (example): Please add updated visitor numbers for Q3 2025 and shorten the first paragraph.
-          </div>
-
-          <div class="editor-placeholder">
-            <div class="editor-toolbar-placeholder">
-              CKEditor toolbar (bold, bullets, headings…) – this is just a visual placeholder.
-            </div>
-            <div class="editor-body-placeholder">
-              <p><strong>Key messages on tourism cooperation</strong></p>
-              <p>• Thank Serbia for increasing tourist flows and highlight visa-free regime.</p>
-              <p>• Mention growth in Q3 2025 and opportunities for joint promotion.</p>
-              <p style="opacity:0.6;">(This is static text; in the real app this area will be CKEditor.)</p>
-            </div>
-          </div>
-
-          <div class="card-actions" style="justify-content:flex-end; margin-top: 10px;">
-            <button class="btn btn-outline">Save draft</button>
-            <button class="btn btn-primary">Submit for review</button>
-          </div>
         </section>
       </main>
     </div>
