--- a/library.html
+++ b/library.html
@@ -69,7 +69,9 @@
           <div class="card-header">
             <div>
               <div class="card-title">Select country</div>
-              <div class="card-subtitle">Only Chairman-approved files appear here.</div>
+              <div class="card-subtitle">
+                TPs title is taken from the original calendar event.
+              </div>
             </div>
           </div>
 
@@ -83,13 +85,18 @@
           </div>
 
           <div class="field">
+            <span class="field-label">TPs title</span>
+            <span style="font-size:13px;">Serbia – JEC Talking Points (Belgrade, Second Session)</span>
+          </div>
+
+          <div class="field">
             <span class="field-label">Last edited</span>
             <span style="font-size:13px;">05 Dec 2025 · 17:20</span>
           </div>
 
           <div class="field">
             <span class="field-label">Approved by</span>
-            <span style="font-size:13px;">Chairman – L. Tortladze</span>
+            <span style="font-size:13px;">Chairman – Genadi Arveladze</span>
           </div>
 
           <div class="card-actions" style="margin-top:8px;">
@@ -102,3 +109,4 @@
   </div>
 </body>
 </html>
+
